added a new global mixin to create the skewing effect to the opposite direction +removed unused css

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,6 +1,6 @@
 @mixin globalTransform {
-  transform: scale(1.2);
-  transform: rotateX(10deg);
-  transform: rotateZ(5deg);
   transform: matrix3d(1, 0, 0, 0, 0.1, 1, 2, 0, 0, 0, 1, 0, 2, 2, 0, 1.1);
+}
+@mixin globalTransformReverse {
+  transform: matrix3d(1, 0, 0, 0, -0.1, 1, 2, 0, 0, 0, 1, 0, 2, 2, 0, 1.1);
 }
